--- a/design_cafe/index.html
+++ b/design_cafe/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./CSS/style.css"> 
     
    
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="./slick-1.8.1/slick/slick.js"></script>
     <!-- <script src="js/lightbox-plus-jquery.min.js"></script> -->
     <script src="js/lightbox.min.js"></script>
@@ -56,7 +56,7 @@
         <div class="mainvisual">
             <picture>
                 <source
-                srcset="./images/sp_main_vs@2x-100.jpg"
+                srcset="./images/sp_main_vs_2@2x-100.jpg"
                 media="(max-width:767px)"
                 />
         <img src="./images/pc_first-100.jpg" alt="カフェ店内の様子">
